# pbr_tracer

./: Cargo.toml  build.rs
pbr_tracer_derive/: Cargo.toml
pbr_tracer_derive/src/: lib.rs
src/: lib.rs  main.rs  raytracer.rs
src/core/: buffer.rs  camera.rs  display.rs  event.rs  event_processing.rs  events.rs  gameloop.rs  gpu.rs  mod.rs  render_target.rs  shader.rs  smart_arc.rs
src/core/rendering/: camera_view.rs  compose.rs  composite.rs  compute.rs  mod.rs  render.rs  render_fragments.rs
src/fragments/: debug.rs  intersector.rs  intersectors.rs  mod.rs  mpr.rs  pathtracer.rs  post_processing.rs  render_fragments.rs  shader_fragments.rs  shading.rs  tracing.rs
src/libs/: buffer.rs  embed.rs  mod.rs  renderchain.rs  shader.rs  shader_fragment.rs  smart_arc.rs  texture.rs
src/libs/buffer/: sampled_texture_buffer.rs  storage.rs  storage_buffer.rs  storage_texture_buffer.rs  texture_buffer.rs  texture_sampler_buffer.rs  uniform.rs  uniform_buffer.rs
src/libs/renderchain/: compute_step.rs
src/renderers/: debug.rs  mod.rs  pathtracer.rs  post_processing.rs
src/rendering/: basic_render.rs  compose.rs  compute.rs  mod.rs  render.rs  render_target.rs
src/shader/: compose.wgsl  composite.wgsl  compute.wgsl  debug.wgsl  mpr.wgsl  pathtracer.wgsl  pbrt.wgsl
src/shader/fuck/: poop2.wgsl  poopoo.wgsl
src/shader/post_processing/: gamma.wgsl  pipeline.wgsl
src/shader/raymarch/: primitives.wgsl  raymarch.wgsl
src/shader/shading/: cel_shading.wgsl  simple_diffuse.wgsl
src/shader/tracing/raymarch/: primitives.wgsl
src/util/: event_processing.rs  mod.rs
