[package]
edition      = "2021"
name         = "pbr_tracer"
rust-version = "1.79"
version      = "0.1.0"


[dependencies]
brainrot = { path = "../brainrot", features = ["bevy", "convert", "macros", "shader", "texture", "vek"] }

bevy_ecs   = "=0.13.2"
bevy_tasks = { version = "=0.13.2", features = ["multi-threaded"] }

egui       = { version = "=0.27.2", features = ["bytemuck", "mint"] }
egui-wgpu  = { version = "=0.27.2", features = ["winit"] }
egui-winit = { version = "=0.27.2" }
wgpu       = "=0.19.1"
winit      = { version = "=0.29.4", features = ["rwh_05"] }


bytemuck    = { version = "1.15.0", features = ["derive", "min_const_generics"] }
env_logger  = "0.11"
include_dir = "0.7.3"
log         = "0.4"
pollster    = "0.3.0"
velcro      = "0.5.4"
once_cell = "1.19.0"
