[package]
edition      = "2021"
name         = "pbr_tracer"
rust-version = "1.79"
version      = "0.1.0"


[build-dependencies]
brainrot = { path = "../brainrot", features = ["shader"] }


[dependencies]
brainrot = { path = "../brainrot", features = ["bevy", "convert", "shader", "texture", "vec"] }

bevy_ecs   = "=0.13.2"
bevy_tasks = { version = "=0.13.2", features = ["multi-threaded"] }

# egui       = { version = "=0.27.2", features = ["bytemuck", "mint"] }
# egui-wgpu  = { version = "=0.27.2", features = ["winit"] }
# egui-winit = { version = "=0.27.2" }
wgpu  = "=0.19.1"
winit = { version = "=0.29.4", features = ["rwh_05"] }


bytemuck   = { version = "1.15.0", features = ["derive", "min_const_generics"] }
dyn-clone  = "1.0.17"
env_logger = "0.11"
log        = "0.4"
pollster   = "0.3.0"
velcro     = "0.5.4"
