[package]
edition      = "2021"
name         = "pbr_tracer"
rust-version = "1.79"
version      = "0.1.0"


[build-dependencies]
brainrot = { path = "../brainrot", features = ["shader"] }


[dependencies]
brainrot          = { path = "../brainrot", features = ["bevy", "convert", "shader", "texture", "vec"] }
pbr_tracer_derive = { version = "0.1.0", path = "pbr_tracer_derive" }

bevy_ecs   = "=0.13.2"
bevy_tasks = { version = "=0.13.2", features = ["multi-threaded"] }

# egui       = { version = "=0.27.2", features = ["bytemuck", "mint"] }
# egui-wgpu  = { version = "=0.27.2", features = ["winit"] }
# egui-winit = { version = "=0.27.2" }
wgpu  = "=0.19.1"
winit = { version = "=0.29.4", features = ["rwh_05"] }


anyhow       = "1.0.86"
bytemuck     = { version = "1.15.0", features = ["derive", "min_const_generics"] }
derive_more  = "0.99.18"
env_logger   = "0.11"
hashlink     = "0.9.1"
log          = "0.4"
pollster     = "0.3.0"
rand         = "0.8.5"
regex        = "1.10.5"
replace_with = "0.1.7"
rust-embed   = { version = "8.4.0", features = ["compression", "include-exclude", "interpolate-folder-path"] }
typed-path   = "0.9.0"
velcro       = "0.5.4"
